fix(styles): dark mode high light color (#1020)
* fix: colors

* feat: dark mode sidebar underline color

* fix: card link color

* fix: colors

* fix: card link color

--- a/src/components/FeedbackForm/index.module.css
+++ b/src/components/FeedbackForm/index.module.css
@@ -18,6 +18,10 @@
   margin-bottom: 20px;
 }
 
+[data-theme="dark"] .breakLine {
+  background-color: #152c3c;
+}
+
 .leftGroupContainer {
   display: flex;
   flex-direction: column;
