--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -33,8 +33,8 @@
   --ifm-paragraph-margin-bottom: 0.5rem;
   --ifm-list-paragraph-margin: 0.2rem;
   letter-spacing: 0px;
-  --ifm-font-family-monospace: RobotoMono, SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
+  --ifm-font-family-monospace: RobotoMono, SFMono-Regular, Menlo, Monaco,
+    Consolas, "Liberation Mono", "Courier New", monospace;
 
   --doc-sidebar-width: 260px !important;
   --ifm-tabs-padding-vertical: 0.5rem !important;
@@ -45,7 +45,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #86f2dd;
+  --ifm-color-primary: #48dcbc;
   --ifm-color-primary-dark: #4bb1ec;
   --ifm-color-primary-darker: #0098ef;
   --ifm-color-primary-darkest: #0175b8;
@@ -55,7 +55,6 @@
   --ifm-background-color: #1f2765;
   --ifm-navbar-link-color: #e3e3e3;
   --ifm-heading-color: #e3e3e3;
-  --ifm-card-background-color: #152431;
 
   --ifm-button-background-color: linear-gradient(
       0deg,
@@ -81,6 +80,10 @@
   --docsearch-primary-color: var(--ifm-color-primary-darkest) !important;
 }
 
+[data-theme="dark"] hr {
+  background-color: #16545e;
+}
+
 html[data-theme="dark"] {
   --ifm-background-color: #091720;
   --ifm-background-surface-color: #222f3d;
@@ -88,14 +91,17 @@ html[data-theme="dark"] {
   --ifm-color-content: #e3e3e3;
   --ifm-color-content-secondary: #fff;
   --ifm-link-color: #48dcbc;
-  --ifm-tabs-color-active-border: #86f2dd;
-  --ifm-tabs-color-active: #86f2dd;
+  --ifm-tabs-color-active-border: #48dcbc;
+  --ifm-tabs-color-active: #48dcbc;
   --ifm-code-background: #fafafa28;
-  --ifm-breadcrumb-color-active: #86f2dd;
-  --ifm-menu-color-active: #86f2dd;
+  --ifm-breadcrumb-color-active: #48dcbc;
+  --ifm-menu-color-active: #48dcbc;
   --ifm-menu-color: #9da1a6;
   --docusaurus-collapse-button-bg: #091720 !important;
   --ifm-toc-border-color: #001f2b;
+
+  --ifm-card-background-color: #081f29;
+  --ifm-card-border-color: #152c3c;
 }
 
 /* custom sidebar menu */
@@ -220,7 +226,10 @@ h3 {
   margin-left: 1.5rem;
 }
 
-.theme-doc-markdown ol li:not(.tabs__item) > :first-child:not(code, strong)::before {
+.theme-doc-markdown
+  ol
+  li:not(.tabs__item)
+  > :first-child:not(code, strong)::before {
   font-size: 0.75rem;
   font-weight: bold;
   counter-increment: circle-counter;
@@ -405,7 +414,7 @@ table tbody tr td {
 }
 
 [data-theme="dark"] td {
-  border-top: 1px solid #a4a2a229;
+  border-top: 1px solid var(--ifm-card-border-color);
 }
 
 thead tr:first-child {
